popularity-contest (1.46) UNRELEASED; urgency=low

  [ Petter Reinholdtsen ]
  * Make sure to reinsert the ID if it is missing in the configuration
    file.  Based on bug reported by Alf-Tonny Batz.

  [ Christian Perrier ]
  * Translations:
    - Irish. Closes: #480871
    - Belarusian. Closes: #483527
    - Korean. Closes: #491413
    - Georgian. Closes: #498418

 -- Christian Perrier <bubulle@debian.org>  Mon, 12 May 2008 21:11:01 +0200

popularity-contest (1.45) unstable; urgency=low

  [ Petter Reinholdtsen ]
  * Fix typo in debug message emitted from prepop.pl.

  [ Bill Allombert ]
  * popcon.pl:
    - revert changes introduced in 1.44.
    - Use :encoding(UTF-8) instead of :utf8 when reading packages files
    - Add query box linking to <http://qa.debian.org/popcon.php>
  * debian/control:
    - No more Recommends mime-construct. Closes: #466352.
    - Recommends cron | fcron. Closes: #479664.
  * Instead of reporting on Sunday, now a random day in the week is
    chosen. This spread the load on the server. Closes: #440493, #459910.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 11 May 2008 12:20:19 +0200

popularity-contest (1.44) unstable; urgency=low

  [ Petter Reinholdtsen ]
  * Make sure popanal do not crash when an invalid timestamp is found
    in the POPULARITY-CONTEST-0 header.
  * Remove code in cron.weekly to sleep a random period of time up to
    an hour, to test hypothesis that this was not the reason for the
    increase in submissions seen the last few months.  Possibly
    reopens #440493, #459910.
  * Change popcon.pl to handle the fact that
    /org/ftp.root/debian/dists/stable/main/binary-*/Packages.gz is not
    UTF-8.  Otherwise it would croak on a name containing 'ó'.

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 18 Mar 2008 20:17:48 +0100

popularity-contest (1.43) unstable; urgency=low

  [ Christian Perrier ]
  * Translations:
    - Kannada added. Closes: #422031
    - Hebrew updated. Closes: #445532

  [ Bill Allombert ]